Выбор GC и XMX перед запуском